2006-09-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py: Bump version

	* pykickstart/parser.py (KickstartHandlers.doMethod):  Add support for
	--biospart option (#207585).
	* pykickstart/writer.py (KickstartWriter.doMethod):  Likewise.

	* pykickstart/writer.py (KickstartWriter.doIscsi):  Output new syntax.
	(KickstartWriter.doZFCP):  Likewise.
	(KickstartWriter.doIscsiName):  Added.

2006-09-20  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: Bump version

	* pykickstart/parser.py (KickstartHandlers.doIscsi): New and
	improved iscsi syntax.  Also, allow multiple zfcp devs
	* pykickstart/data.py: Likewise.

2006-07-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Add noipv4 and noipv6 to KickstartNetworkData.
	* pykickstart/parser.py (KickstartHandlers.doNetwork):  Limit
	bootproto choices to what anaconda can handle.  Add support for
	--noipv4 and --noipv6 options.
	* pykickstart/writer.py (KickstartWriter.doNetwork):  Write out new
	networking options.

2006-06-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doIscsi):  Add iscsi writer.

2006-06-20  Jeremy Katz  <katzj@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doIscsi): Initial iscsi
	support.  This syntax is likely to change but this makes testing
	so much easier.
	* pykickstart/data.py (KickstartData.__init__): Add iscsi data.

2006-06-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser (KickstartHandlers.doRaid):  Handle a RAID device
	as an integer instead of a string (#176537).

2006-06-16  Jeremy Katz  <katzj@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doMethod): Handle nfs --opts

2006-06-06  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Fix BuildRequires (#194156).

2006-05-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-05-24  Chris Lumens  <clumens@redhat.com>
